# smart-automation-suite

./: CHANGELOG.md  README.md  cli.py  config.json  organizer.py  pyproject.toml  run_log.json
automation_suite/: __init__.py  file_organizer.py
smart_automation_suite/: cli.py  organizer.py
smart_automation_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
smart_automation_suite/utils/: report.py
utils/: history.py
